# elevator_nix

./: README.txt
src/: CMakeLists.txt
src/client/: client.cpp  client.h
src/server/: server.cpp  server.h
src/socket/: socket.cpp  socket.h
